--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,35 +6,35 @@ services:
     restart: unless-stopped
     ports:
       - 80:80
-    # devices:
+    devices:
     # use `python -m serial.tools.miniterm` to see what the name is of the printer, this requires pyserial
-    #  - /dev/ttyACM0:/dev/ttyACM0
-    #  - /dev/video0:/dev/video0
+      - /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0:/dev/ttyUSB0
+      - /dev/video4:/dev/video0
     volumes:
      - octoprint:/octoprint
     # uncomment the lines below to ensure camera streaming is enabled when
     # you add a video device
-    #environment:
-    #  - ENABLE_MJPG_STREAMER=true
+    environment:
+      - ENABLE_MJPG_STREAMER=true
   
   ####
   # uncomment if you wish to edit the configuration files of octoprint
   # refer to docs on configuration editing for more information
   ####
 
-  #config-editor:
-  #  image: linuxserver/code-server
-  #  ports:
-  #    - 8443:8443
-  #  depends_on:
-  #    - octoprint
-  #  restart: unless-stopped
-  #  environment:
-  #    - PUID=0
-  #    - PGID=0
-  #    - TZ=America/Chicago
-  #  volumes:
-  #    - octoprint:/octoprint
+  config-editor:
+    image: linuxserver/code-server
+    ports:
+      - 8443:8443
+    depends_on:
+      - octoprint
+    restart: unless-stopped
+    environment:
+      - PUID=0
+      - PGID=0
+      - TZ=America/New_York
+    volumes:
+      - octoprint:/octoprint
 
 volumes:
   octoprint:
